--- a/.gitignore
+++ b/.gitignore
@@ -557,3 +557,7 @@ model.nuget.info
 
 # Exclude NuGet cache files
 nuget.cache
+
+#appsettings.json ignores
+DatabaseInterfacing/appsettings.json
+
