--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -12,5 +12,9 @@
     "Issuer": "JWTAuthenticationServer",
     "Audience": "JWTServiceBlazorWasmClient",
     "Subject": "JWTServiceAccessToken"
+  },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=lucky.db.elephantsql.com;Port=5432;Database=odvlulua;Username=odvlulua;Password=oBlgMTohINy3iW30-RxXfKY0GyrtS1c2;SSL Mode=Require;Trust Server Certificate=true;"
   }
 }
