Initial implementation of Water Temperature logic and API layers.

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\DatabaseInterfacing\DatabaseInterfacing.csproj" />
+      <ProjectReference Include="..\IoTInterfacing\IoTInterfacing.csproj" />
     </ItemGroup>
 
 </Project>
