thresholds added to logic for checks, code cleanup

--- a/WebAPI/Config/thresholdConfig.json
+++ b/WebAPI/Config/thresholdConfig.json
@@ -2,31 +2,31 @@
   "thresholds": [
     {
       "type": "water_conductivity",
-      "perfect-min": 6,
+      "min": 6,
       "warning-min": 6.2,
       "warning-max": 6.8,
-      "perfect-max": 7
+      "max": 7
     },
     {
       "type": "water_temperature",
-      "perfect-min": 4,
+      "min": 6,
       "warning-min": 6.2,
       "warning-max": 6.8,
-      "perfect-max": 10
+      "max": 7
     },
     {
       "type": "water_ph",
-      "perfect-min": 6,
+      "min": 6,
       "warning-min": 6.2,
       "warning-max": 6.8,
-      "perfect-max": 7
+      "max": 7
     },
     {
       "type": "water_flow",
-      "perfect-min": 6,
+      "min": 6,
       "warning-min": 6.2,
       "warning-max": 6.8,
-      "perfect-max": 7
+      "max": 7
     }
   ]
 }
