--- a/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI.csproj
@@ -24,4 +24,8 @@
       <_ContentIncludedByDefault Remove="Config\thresholdConfig.json" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Config\" />
+    </ItemGroup>
+
 </Project>
