--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -11,6 +11,11 @@
       <ProjectReference Include="..\IoTInterfacing\IoTInterfacing.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Moq" Version="4.20.70" />
+      <PackageReference Include="xunit" Version="2.8.0" />
+    </ItemGroup>
+
 
 
 </Project>
