Alert Notifications Implementation

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -16,5 +16,12 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "Host=lucky.db.elephantsql.com;Port=5432;Database=odvlulua;Username=odvlulua;Password=oBlgMTohINy3iW30-RxXfKY0GyrtS1c2;SSL Mode=Require;Trust Server Certificate=true;"
+  },
+
+  "Smtp": {
+    "Server": "your_smtp_server",
+    "Port": "your_smtp_port",
+    "Username": "your_smtp_username",
+    "Password": "your_smtp_password"
   }
 }
