Logic Split Part 2 (FINISH???)

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -19,9 +19,9 @@
   },
 
   "Smtp": {
-    "Server": "your_smtp_server",
-    "Port": "your_smtp_port",
-    "Username": "your_smtp_username",
-    "Password": "your_smtp_password"
+    "Server": "smtp.office365.com",
+    "Port": "587",
+    "Username": "your_outlook_adress",
+    "Password": "your_outlook_password"
   }
 }
