--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -19,9 +19,9 @@
   },
 
   "Smtp": {
-    "Server": "smtp.office365.com",
+    "Server": "smtp.gmail.com",
     "Port": "587",
-    "Username": "your_outlook_adress",
-    "Password": "your_outlook_password"
+    "Username": "plantyalertmanager@gmail.com",
+    "Password": "planty1234"
   }
 }
