--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Castle.Core" Version="5.1.1" />
       <PackageReference Include="Moq" Version="4.20.70" />
       <PackageReference Include="xunit" Version="2.8.0" />
     </ItemGroup>
